<resources>
    <string name="app_name">Pass Vault</string>
    <string name="home_label">Home</string>
    <string name="add_level">Add</string>
    <string name="delete_label">Delete</string>
    <string name="default_account_number">1</string>
    <string name="default_platform">Platform</string>
    <string name="default_username">Username</string>
    <string name="platform_hint">Platform Name - e.g. Netflix</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="reenter_password_hint">Re-enter Password</string>
    <string name="add_button_label">Add New Account</string>
    <string name="search_title">Search</string>
    <string name="sort_title">Sort</string>
    <string name="username_ascending">Username A - Z</string>
    <string name="username_descending">Username Z - A</string>
    <string name="platform_ascending">Platform A - Z</string>
    <string name="platform_descending">Platform Z - A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_text">Create a 5 digit passcode that will be used to login to the application.</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="saved_passcode">SAVED_PASSCODE</string>
    <string name="preference_file_login">PREFERENCE_FILE_LOGIN</string>
    <string name="password_generator">Generator</string>
    <string name="btn_label_generate_password">Generate Password</string>
    <string name="switch_label_special_characters">Special Characters</string>
    <string name="switch_label_numbers">Numbers</string>
    <string name="switch_label_lowercase_letters">Lowercase Letters</string>
    <string name="switch_label_uppercase_letters">Uppercase Letters</string>
    <string name="copy_icon_desc">Copy icon</string>
    <string name="number_of_characters">Number of Characters</string>
    <string name="exit_menu_item">Exit</string>
    <string name="import_csv_label">Import CSV</string>
    <string name="export_csv_label">Export CSV</string>
    <string name="enter_file_name_hint">Enter file name.</string>
    <string name="about_menu_title">About</string>
    <string name="about_app_message">Pass vault is free and open source. It is developed by a computer science student who loves anything and everything to do about Android. As this is a free application being developed by a sole developer on his free time on top of work and studies, updates will be very sporadic. In saying that, I am very open to any feedback, ideas, and suggestions, so feel free to send me an e-mail.</string>
    <string name="developer_email">nosniv.developer@gmail.com</string>
    <string name="feedback_header">Send feedback or suggestions to</string>
    <string name="follow_us_header">Follow us on</string>
</resources>