<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/edit_generated_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="none"
            android:maxLength="128"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields"
            android:scrollbars="horizontal"/>

        <ImageView
            android:id="@+id/img_copy_pass"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/edit_generated_password"
            app:layout_constraintStart_toEndOf="@+id/edit_generated_password"
            app:layout_constraintTop_toTopOf="@+id/edit_generated_password"
            app:srcCompat="@drawable/ic_baseline_content_copy_24"
            android:contentDescription="@string/copy_icon_desc" />

        <Button
            android:id="@+id/button_generate_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_label_generate_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_generated_password" />

        <com.google.android.material.slider.Slider
            android:id="@+id/char_limit_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_generate_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_current_slider_value"
            android:stepSize="1"
            android:valueFrom="8"
            android:valueTo="128"/>

        <TextView
            android:id="@+id/edit_current_slider_value"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/number_of_characters"
            app:layout_constraintBottom_toBottomOf="@+id/char_limit_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/char_limit_slider"
            app:layout_constraintTop_toTopOf="@+id/char_limit_slider" />

        <LinearLayout
            android:id="@+id/layout_switch_uppercase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/char_limit_slider"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintHorizontal_bias="0">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_uppercase"
                android:theme="@style/SwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_label_uppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_label_uppercase_letters"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_switch_lowercase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/layout_switch_uppercase"
            app:layout_constraintTop_toBottomOf="@id/char_limit_slider"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_lowercase"
                android:theme="@style/SwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_label_lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_label_lowercase_letters"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_switch_numbers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_switch_uppercase"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintHorizontal_bias="0">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_numbers"
                android:theme="@style/SwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_label_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_label_numbers"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_switch_special_char"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/layout_switch_numbers"
            app:layout_constraintTop_toBottomOf="@id/layout_switch_lowercase"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_special_char"
                android:theme="@style/SwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_label_special_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_label_special_characters"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>